# redis-om

./: Cargo.toml  LICENSE  README.md  bacon.toml
.github/workflows/: main.yml
lib/: Cargo.toml
lib/examples/: readme.rs
lib/src/: hash_model.rs  json_model.rs  lib.rs  redis_model.rs  shared.rs
lib/src/hash_model/: async.rs  mod.rs  sync.rs
lib/src/json_model/: async.rs  mod.rs  sync.rs
lib/src/redissearch_model/: mod.rs
lib/src/stream_model/: async.rs  message.rs  mod.rs  reply.rs  sync.rs
lib/tests/: hash_model.rs  hash_model_async.rs  hash_model_sync.rs  json_model.rs  json_model_async.rs  json_model_sync.rs  redis_model.rs  redis_value.rs  redis_value_transport.rs  redissearch_model.rs  stream_model.rs  stream_model_async.rs  stream_model_sync.rs
macros/: Cargo.toml
macros/src/: consts.rs  generate.rs  get_set.rs  hash_model.rs  lib.rs  redis_model.rs
macros/src/ast/: ctx.rs  data.rs  mod.rs
macros/src/ast/common/: attr.rs  default.rs  mod.rs  name.rs  rename.rs  style.rs  symbol.rs
macros/src/ast/container/: attr.rs  mod.rs
macros/src/ast/field/: attr.rs  mod.rs
macros/src/ast/variant/: attr.rs  mod.rs
macros/src/derive/: get_set.rs  hash_model.rs  json_model.rs  mod.rs  stream_model.rs
macros/src/derive/redis_model/: enum.rs  mod.rs  struct.rs
macros/src/derive/redissearch_model/: mod.rs  struct.rs
macros/src/derive/value/: data_enum.rs  data_struct.rs  enum.rs  struct.rs
macros/src/ext/: attr_ext.rs  fields_ext.rs  lit_ext.rs  meta_ext.rs  metalist_ext.rs  mod.rs  path_ext.rs  type_ext.rs
macros/src/hash_model/: mod.rs
macros/src/redis_model/: mod.rs
macros/src/util/: mod.rs  parse.rs  string.rs
macros/src/value/: data_struct.rs  mod.rs
