[package]
name = "redis-om"
description = "The Unofficial Object mapping for Redis and Rust. Inspired by redis-om-python"
version = "0.1.0"
edition = "2021"
authors = [ "kkharji <kkharji@protonmail.com>"]
license = "MIT"
documentation = "https://docs.rs/redis-om"
homepage = "https://github.com/kkharji/redis-om-rust"
repository = "https://github.com/kkharji/redis-om-rust"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
json = [ "redis/json", "serde", "serde_json", "redis-om-macros/json" ]

[dependencies]
tap             = { version = "1.0" }
thiserror       = { version = "1.0" }
redis-om-macros = { path = "../macros" }
redis           = { version = "0.22.1" }
rusty_ulid      = { version = "2.0.0" }
serde           = { version = "1", features = [ "derive" ], optional = true }
serde_json      = { version = "1", optional = true }

[dev-dependencies]
tokio          = { version = "1.25.0", features = ["full"] }
trybuild       = { version = "1.0.77" }
redis-swapplex = { version = "0.4.0" }

[[example]]
name = "readme"
